--- a/src/App.css
+++ b/src/App.css
@@ -37,18 +37,39 @@
   }
 }
 
-.fontfamily{
+.fontfamily {
   opacity: 0.5;
- font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
- 
-body{
+
+body {
   background-image: url("https://images.unsplash.com/photo-1505533542167-8c89838bb19e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
 
-.backnone{
+.backnone {
   background: transparent;
+}
+
+.setOfBox {
+  width: 25%;
+  height: 60vh;
+  background-image: url('/public/image/img3.jpg');
+  background-size: cover;
+background-position: center;  
+ 
+ 
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.round{
+  border-radius: 10px;
+  
+}
+
+.color{
+color: white;  
 }
